minor change to have home and stats images appear

--- a/FrontEnd/templates/home.html
+++ b/FrontEnd/templates/home.html
@@ -89,7 +89,7 @@ body,h1,h5 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <img src="{{ url_for('static', filename='images/prediction.jpg')}}">
+      <img src="{{ url_for('static', filename='images/prediction.JPG')}}">
     </div>
 
     <div class="w3-twothird">
