corrected amount of records in html

--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -82,7 +82,7 @@
         This prediction only a test for school project for full fill the
         requirement of Demystifying Machine Learning. This application we use
         Python Pandas, HTML/CSS/Bootstrap and Heroku for hosting the
-        application. The dataset has over 1000 records from a combination of 5 heart disease independently available datasets 
+        application. The dataset has 1190 records from a combination of 5 heart disease independently available datasets 
         (Cleveland, Long Beach VA, Switzerland, Hungary, and Statlog). It does not intent to diagnose any Disease. Thank you for visiting our
         website.
       </p>
