--- a/FrontEnd/templates/stats.html
+++ b/FrontEnd/templates/stats.html
@@ -82,7 +82,7 @@
         <p> 13.	thall - thallium stress test (1=fixed defect, 2=reversable defect, 3=normal</p>
         <p> 14.	ouput - 0=chance of heart attack is low, 1= chance of heart attack is high.</p>
     </div>
-      <p>The dataset contains 1190 patient records, of which 748 were male (represented as 1) and 2270 were female (represented as 0). After removing null values, the data set was reduced to 1018 records. This reduction also removed some of the outliers that appear in the dataset.
+      <p>The dataset contains 1190 patient records, of which 748 were male (represented as 1) and 270 were female (represented as 0). After removing null values, the data set was reduced to 1018 records. This reduction also removed some of the outliers that appear in the dataset.
           The following graphs provide general statistical insight into the data.</p>
        </div>
     <div class="row">
@@ -136,13 +136,16 @@
         </div>    
       <div class="row">
         <div class="column">
-            <img src="{{ url_for('static', filename='images/heatmpap.jpg')}}" alt="heatmap" style="width:100%">
+            <img src="{{ url_for('static', filename='images/heatmap.JPG')}}" alt="heatmap" style="width:100%">
           </div>
       </div>
       <div class="text-black-fontsize-10px">
         <p>The resting ecg, fasting blood sugar, max heart rate, and cholesterol had the lowest correlation to target as well as correlation to the other features. Age, chest pain type, exercise induced angina, oldpeak, and ST slope had the highest correlation to the target. Age, ST slope and oldpeak have the most consistent correlation across all features.
         </p>
         </div> 
+  <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
+          <p>We did it!!</p>
+  </footer>
   <!--script src="https://code.jquery.com/jquery-2.1.3.min.js"></script-->
   <!--script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script-->
   <script type="text/javascript" src="static/logic.js"></script>
